[package]
name = "hlhsinfo_backend_server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = "0.10.54"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
uuid = "1.3.3"
lazy_static = "1.4.0"
jsonwebtoken = "8.3.0"
scraper = "0.16.0"
url = "2.4.0"
reqwest = { version = "0.11.18", features = ["cookies", "multipart"] }
serde_urlencoded = "0.7.1"

[profile.release]
debug = false
strip = "none"
